--- a/src/app/styles/themes/purple.scss
+++ b/src/app/styles/themes/purple.scss
@@ -1,8 +1,15 @@
 .app_purple_theme {
-  --bg-color: #f6f4fb;
-  --inverted-bg-color: #23015f;
-  --primary-color: #592fa2;
-  --secondary-color: #000f47;
-  --inverted-primary-color: #dbd5dc;
-  --inverted-secondary-color: #f6f4fb;
+	--bg-color: #f6f4fb;
+	--inverted-bg-color: #23015f;
+	--primary-color: #592fa2;
+	--secondary-color: #000f47;
+	--inverted-primary-color: #dbd5dc;
+	--inverted-secondary-color: #f6f4fb;
+
+	//skeleton
+	--skeleton-color: #ffffff;
+	--skeleton-shadow: rgba(0 0 0/20%);
+
+	//code
+	--code-bg: #fff;
 }
