--- a/src/pages/ProfilePage/ui/ProfilePageHeader/ProfilePageHeader.module.scss
+++ b/src/pages/ProfilePage/ui/ProfilePageHeader/ProfilePageHeader.module.scss
@@ -1,9 +1,12 @@
 .ProfilePageHeader {
-  display: flex;
-  margin-bottom: 20px;
+	display: flex;
+	margin-bottom: 20px;
 
-  .editBtn {
-    margin-left: auto;
-    margin-right: 10px;
-  }
+	.editBtn {
+		margin-right: 10px;
+	}
+}
+
+.btnWrapper {
+	margin-left: auto;
 }
