--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -10,6 +10,9 @@
 	--skeleton-color: #ffffff;
 	--skeleton-shadow: rgba(0 0 0/20%);
 
-	//
+	//code
 	--code-bg: #fff;
+
+	//card
+	--card-bg: #d5d5d7;
 }
