add recommendations articles for article details page

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -2,7 +2,7 @@
 @import "variables/global";
 @import "themes/normal";
 @import "themes/dark";
-@import "themes/purple.scss";
+@import "themes/purple";
 
 .app,
 .app_modal {
@@ -17,4 +17,19 @@
 
 .content-page {
 	display: flex;
+}
+
+*::-webkit-scrollbar {
+	width: 12px; /* ширина scrollbar */
+	height: 8px;
+}
+
+*::-webkit-scrollbar-track {
+	background: var(--card-bg); /* цвет дорожки */
+}
+
+*::-webkit-scrollbar-thumb {
+	background-color: var(--inverted-primary-color); /* цвет плашки */
+	border-radius: 20px; /* закругления плашки */
+	border: 2px solid var(--primary-color); /* padding вокруг плашки */
 }
