--- a/src/shared/ui/Text/Text.module.scss
+++ b/src/shared/ui/Text/Text.module.scss
@@ -38,6 +38,16 @@
 	text-align: center;
 }
 
+.size_s {
+	.title {
+		font: var(--font-m);
+	}
+
+	.text {
+		font: var(--fotn-s);
+	}
+}
+
 .size_m {
 	.title {
 		font: var(--font-l);
