--- a/src/pages/TerminalPage/ui/TerminalPage.module.scss
+++ b/src/pages/TerminalPage/ui/TerminalPage.module.scss
@@ -1,18 +1,25 @@
 .TerminalPage {
 	display: grid;
-	grid-template-columns: 360px 1fr;
-	gap: 16px;
+	grid-template-columns: 400px 1fr;
+	gap: 24px;
+	padding: 24px;
+	min-height: calc(100vh - var(--navbar-height));
+	height: 100%;
+	box-sizing: border-box;
 }
 
 .leftColumn {
 	display: flex;
 	flex-direction: column;
-	gap: 16px;
+	gap: 20px;
+	height: 100%;
+	min-height: 0;
 }
 
 .rightColumn {
 	display: grid;
-	grid-template-rows: 1fr 320px;
-	gap: 16px;
+	grid-template-rows: 1fr auto;
+	gap: 20px;
+	height: 100%;
 	min-height: 0;
 }
