--- a/src/widgets/PositionsPanel/PositionsPanel.module.scss
+++ b/src/widgets/PositionsPanel/PositionsPanel.module.scss
@@ -2,7 +2,7 @@
 	display: flex;
 	flex-direction: column;
 	flex: 1;
-	min-height: 0;
+	min-height: 400px;
 	border: 1px solid rgba(255, 255, 255, 0.1);
 	border-radius: 20px;
 	padding: 24px;
